Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34314

Rollback does not remove items from DurabilityMonitor

    XMLWordPrintable

Details

    • Untriaged
    • Unknown
    • KV-Engine Mad-Hatter Beta

    Description

      In the event of a (replica) node rolling back, we do not remove items from the DurabilityMonitor.

      As such, if there are prepared SyncWrites in the DurabilityMonitor which we have rolled back past, this could result in now-invalid SyncWrites being kept in the vBucket.

      See VBucket::postProcessRollback

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              ben.huddleston Ben Huddleston
              drigby Dave Rigby (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty