MB-34314: Remove in-flight SyncWrites from PassiveDM

At rollback we should remove SyncWrites after the rollback seqno
from the PassiveDM. We should also set the HCS and HPS to the correct
values.

Change-Id: I8cdf2c120b3db7c3fb3578211b67f0f8eaf9834c
Reviewed-on: http://review.couchbase.org/110702
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>