engines/ep/src/vbucket.cc
@@ -2931,6 +2931,9 @@ void VBucket::postProcessRollback(const RollbackResult& rollbackResult,
     incrRollbackItemCount(prevHighSeqno - rollbackResult.highSeqno);
     checkpointManager->setOpenCheckpointId(1);
     setReceivingInitialDiskSnapshot(false);
+    getPassiveDM().postProcessRollback(rollbackResult.highSeqno,
+                                       rollbackResult.highCompletedSeqno,
+                                       rollbackResult.highPreparedSeqno);
 }
 
 void VBucket::collectionsRolledBack(KVStore& kvstore) {
